k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: app
          image: api:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 3000
